feat(算法细化): :sparkles: 添加针对chrip信号的时延估计方式: 先插值再与高分辨率参考信号比较
顺便添加近场位置解算函数

close #10

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
     "from scipy.ndimage import gaussian_filter\n",
     "\n",
     "import simulation\n",
-    "from algorithm import time_delay_estimation, far_locate"
+    "from algorithm import *"
    ]
   },
   {
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,20 +59,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 几何模型"
+    "#### 几何模型\n",
+    "\n",
+    "- 阵元1, 2, 3坐标分别为(d1, 0), (d2, 0), (d3, 0), 其中阵元1, 2在x轴负半轴.\n",
+    "- theta为声源S的方位角 (极坐标下角度)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "d1, d2, d3 = (K + 1) * d / 2, (K - 1) * d / 2, (K + 1) * d / 2\n",
-    "S = np.array([r * np.cos(theta), r * np.sin(theta)])  # FIXME: 这x该是-, 方位近似解需要重新推导一下\n",
+    "d1, d2, d3 = -(K + 1) * d / 2, -(K - 1) * d / 2, (K + 1) * d / 2\n",
+    "S = np.array([r * np.cos(theta), r * np.sin(theta)])\n",
     "\n",
-    "r1 = float(norm(S - [-d1, 0]))\n",
-    "r2 = float(norm(S - [-d2, 0]))\n",
+    "r1 = float(norm(S - [d1, 0]))\n",
+    "r2 = float(norm(S - [d2, 0]))\n",
     "r3 = float(norm(S - [d3, 0]))\n",
     "\n",
     "# 真实时延\n",
@@ -89,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,25 +138,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "period, T_on = 1, 10e-3\n",
-    "t = np.arange(len(x1)) / fs\n",
-    "s_ref = np.cos(2 * pi * f * t) * (t % period < T_on)\n",
     "\n",
-    "tau1_frac = time_delay_estimation(x1, s_ref, f, fs)\n",
-    "tau2_frac = time_delay_estimation(x2, s_ref, f, fs)\n",
-    "tau3_frac = time_delay_estimation(x3, s_ref, f, fs)\n",
-    "\n",
-    "tau12_hat = tau1_frac - tau2_frac\n",
-    "tau23_hat = tau2_frac - tau3_frac"
+    "tau12_hat = chirp_delay_estimation(x1, x2, fs, f, period, T_on, 3)\n",
+    "tau23_hat = chirp_delay_estimation(x2, x3, fs, f, period, T_on, 3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,25 +159,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "真实相位差phi12: 6.259366343141437\n",
-      "相关相位差phi12': 6.300000000000056\n",
-      "差异: 0.65%\n",
-      "真实相位差phi23: 7.4906163261488246\n",
-      "相关相位差phi23': 8.475000000000149\n",
-      "差异: 13.14%\n"
+      "真实时延差tau12: \t0.00016691643581710498\n",
+      "相关时延差tau12': \t0.0001673333333333249\n",
+      "差异: 0.25%\n",
+      "真实时延差tau23: \t0.00019974976869730198\n",
+      "相关时延差tau23': \t0.00020000000000000573\n",
+      "差异: 0.13%\n"
      ]
     }
    ],
    "source": [
-    "print(f'真实相位差phi12: {(phi12:=t12*f)}\\n相关相位差phi12\\': {phi12_hat}\\n差异: {np.abs(phi12 - phi12_hat) / phi12 * 100:.2f}%')\n",
-    "print(f'真实相位差phi23: {(phi23:=t23*f)}\\n相关相位差phi23\\': {phi23_hat}\\n差异: {np.abs(phi23 - phi23_hat) / phi23 * 100:.2f}%')"
+    "print(f'真实时延差tau12: \\t{t12}\\n相关时延差tau12\\': \\t{tau12_hat}\\n差异: {np.abs(t12 - tau12_hat) / t12 * 100:.2f}%')\n",
+    "print(f'真实时延差tau23: \\t{t23}\\n相关时延差tau23\\': \\t{tau23_hat}\\n差异: {np.abs(t23 - tau23_hat) / t23 * 100:.2f}%')"
    ]
   },
   {
@@ -192,26 +189,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "真实方位角: \t60.0度\n",
-      "估计方位角: \t57.50182614664359度\n",
-      "绝对误差: \t2.4981738533564126度\n",
-      "相对误差: \t4.163623088927347%\n"
+      "----真实----\n",
+      "r: 300.000, theta: 60.000\n",
+      "----远场----\n",
+      "r: 206.000, theta: 59.940\n",
+      "----近场----\n",
+      "r: 206.025, theta: 59.916\n",
+      "方位估计绝对误差: \t0.084度\n",
+      "方位估计相对误差: \t0.141%\n"
      ]
     }
    ],
    "source": [
-    "r_e, theta_e = far_locate(phi12_hat / f, phi23_hat / f, c, K, d)\n",
-    "\n",
-    "# TODO: 解决距离估计因为精度趋近0或inf问题\n",
-    "print(f'真实方位角: \\t{theta/pi*180}度\\n估计方位角: \\t{theta_e/pi*180}度\\n绝对误差: \\t{theta/pi*180 - theta_e/pi*180}度\\n相对误差: \\t{(theta - theta_e)/theta * 100}%')\n",
-    "# print(algorithm.far_locate(t12, t23, c, K, d))"
+    "r_far, theta_far = far_locate(tau12_hat, tau23_hat, c, K, d)\n",
+    "r_near, theta_near = near_locate(tau12_hat, tau23_hat, c, K, d)\n",
+    "print(f'----真实----\\nr: {r:.3f}, theta: {np.rad2deg(theta):.3f}')\n",
+    "print(f'----远场----\\nr: {r_far:.3f}, theta: {np.rad2deg(theta_far):.3f}')\n",
+    "print(f'----近场----\\nr: {r_near:.3f}, theta: {np.rad2deg(theta_near):.3f}\\n方位估计绝对误差: \\t{np.rad2deg(theta - theta_near):.3f}度\\n方位估计相对误差: \\t{(theta - theta_near)/theta * 100:.3f}%')"
    ]
   }
  ],
