feat(算法细化): :sparkles: 使信号生成函数支持连续调用, 支持运动, 丰富噪声源
close #9

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,7 @@
     "from numpy.linalg import norm\n",
     "from matplotlib import pyplot as plt\n",
     "\n",
-    "import simulation\n",
+    "from simulation.signal import Array_Signals\n",
     "from algorithm import *"
    ]
   },
@@ -37,17 +37,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "f = 37500  # 声源频率\n",
-    "T = 1  # 采样时长\n",
+    "sample_interval = 1  # 采样时长\n",
     "r = 300  # 距离\n",
     "theta = np.deg2rad(60)  # 角度\n",
     "\n",
     "d = 0.5\n",
     "K = 0.6 / d\n",
+    "T = 1  # Cw信号周期\n",
+    "T_on = 10e-3  # Cw信号脉宽\n",
     "c = 1500  # 声速\n",
     "fs = 500e3  # 采样频率500k"
    ]
@@ -64,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,15 +91,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 三阵元处采样信号序列 # TODO: 改成用同一个函数生成, 包含阵元的坐标, 生成信号矩阵\n",
-    "weights = [2, 2]\n",
-    "x1 = simulation.sig_gen(c, f, r1, fs, T, weights, 0)\n",
-    "x2 = simulation.sig_gen(c, f, r2, fs, T, weights, 1000)\n",
-    "x3 = simulation.sig_gen(c, f, r3, fs, T, weights, 1000000)"
+    "t = np.arange(0, sample_interval, 1 / fs)\n",
+    "sig = Array_Signals(c, f, T_on, T, S, (d1, d2, d3))\n",
+    "sig.set_params(1, 1, 1.1, 2, 1e-6)\n",
+    "sig.init_rng(1)\n",
+    "x = sig.next(t, np.zeros(2))"
    ]
   },
   {
@@ -109,13 +111,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# plt.plot(x1)\n",
-    "# plt.plot(x2)\n",
-    "# plt.plot(x3)\n",
+    "# plt.plot(t, x[0])\n",
+    "# plt.plot(t, x[1])\n",
+    "# plt.plot(t, x[2])\n",
     "# plt.show()"
    ]
   },
@@ -135,19 +137,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "period, T_on = 1, 10e-3\n",
-    "\n",
-    "tau12_hat = chirp_delay_estimation(x1, x2, fs, f, period, T_on, 3)\n",
-    "tau23_hat = chirp_delay_estimation(x2, x3, fs, f, period, T_on, 3)"
+    "x1, x2, x3 = x[:, -int(fs):]\n",
+    "tau12_hat = cw_delay_estimation(x1, x2, fs, f, T, T_on, 3)\n",
+    "tau23_hat = cw_delay_estimation(x2, x3, fs, f, T, T_on, 3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -164,11 +165,11 @@
      "output_type": "stream",
      "text": [
       "真实时延差tau12: \t0.00016691643581710498\n",
-      "相关时延差tau12': \t-0.0026299999999999935\n",
-      "差异: 1675.64%\n",
+      "相关时延差tau12': \t0.00027266666666667105\n",
+      "差异: 63.36%\n",
       "真实时延差tau23: \t0.00019974976869730198\n",
-      "相关时延差tau23': \t0.0009979999999999989\n",
-      "差异: 399.63%\n"
+      "相关时延差tau23': \t0.00012066666666665782\n",
+      "差异: 39.59%\n"
      ]
     }
    ],
@@ -186,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -196,11 +197,11 @@
       "----真实----\n",
       "r: 300.000, theta: 60.000\n",
       "----远场----\n",
-      "r: nan, theta: nan\n",
+      "r: 0.759, theta: 57.564\n",
       "----近场----\n",
-      "r: nan, theta: nan\n",
-      "方位估计绝对误差: \tnan度\n",
-      "方位估计相对误差: \tnan%\n"
+      "r: 0.724, theta: 42.912\n",
+      "方位估计绝对误差: \t17.088度\n",
+      "方位估计相对误差: \t28.480%\n"
      ]
     }
    ],
