--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,17 +37,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
     "f = 37500  # 声源频率\n",
     "sample_interval = 1  # 采样时长\n",
-    "r = 300  # 距离\n",
+    "r = 100  # 距离\n",
     "theta = np.deg2rad(60)  # 角度\n",
     "\n",
     "d = 0.5\n",
-    "K = 0.6 / d\n",
+    "K = 0.5 / d\n",
     "T = 1  # Cw信号周期\n",
     "T_on = 10e-3  # Cw信号脉宽\n",
     "c = 1500  # 声速\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,15 +91,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [],
    "source": [
     "t = np.arange(0, sample_interval, 1 / fs)\n",
     "sig = Array_Signals(c, f, T_on, T, S, (d1, d2, d3))\n",
-    "sig.set_params(1, 1, 1.1, 2, 1e-6)\n",
+    "sig.set_params(1, 1, 1, 2, 1e-6)\n",
     "sig.init_rng(1)\n",
-    "x = sig.next(t, np.zeros(2))"
+    "x = sig.next(t, (0, 1))"
    ]
   },
   {
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,39 +137,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
     "x1, x2, x3 = x[:, -int(fs):]\n",
-    "tau12_hat = cw_delay_estimation(x1, x2, fs, f, T, T_on, 3)\n",
-    "tau23_hat = cw_delay_estimation(x2, x3, fs, f, T, T_on, 3)"
+    "# FIXME: 真的有必要插值吗\n",
+    "tau12_hat = cw_delay_estimation(x1, x2, fs, f, T, T_on, 1)\n",
+    "tau23_hat = cw_delay_estimation(x2, x3, fs, f, T, T_on, 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "phi12_hat, phi23_hat = tau12_hat * f, tau23_hat * f"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "真实时延差tau12: \t0.00016691643581710498\n",
-      "相关时延差tau12': \t0.00027266666666667105\n",
-      "差异: 63.36%\n",
-      "真实时延差tau23: \t0.00019974976869730198\n",
-      "相关时延差tau23': \t0.00012066666666665782\n",
-      "差异: 39.59%\n"
+      "真实时延差tau12: \t0.00016729010515537842\n",
+      "相关时延差tau12': \t0.00011400000000000299\n",
+      "差异: 31.85%\n",
+      "真实时延差tau23: \t0.00016604010320237232\n",
+      "相关时延差tau23': \t0.00016599999999999948\n",
+      "差异: 0.02%\n"
      ]
     }
    ],
@@ -187,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
@@ -195,13 +187,13 @@
      "output_type": "stream",
      "text": [
       "----真实----\n",
-      "r: 300.000, theta: 60.000\n",
+      "r: 100.000, theta: 60.000\n",
       "----远场----\n",
-      "r: 0.759, theta: 57.564\n",
+      "r: -2.640, theta: 65.165\n",
       "----近场----\n",
-      "r: 0.724, theta: 42.912\n",
-      "方位估计绝对误差: \t17.088度\n",
-      "方位估计相对误差: \t28.480%\n"
+      "r: 2.620, theta: 64.770\n",
+      "方位估计绝对误差: \t-4.770度\n",
+      "方位估计相对误差: \t-7.950%\n"
      ]
     }
    ],
