style: :art: 将近场解算的角度输出也由弧度改为角度, 简化实验写法
顺便将信号生成类的CW信号周期参数改为偏置为1

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,6 +45,8 @@
     "sample_interval = 1  # 采样时长\n",
     "r = 100  # 距离\n",
     "theta = np.deg2rad(60)  # 角度\n",
+    "noise_params = (0.0, 0.0, 0, 0, 0e-6)  # 仿真信号噪声参数\n",
+    "velocity = (0, 0.0)\n",
     "\n",
     "d = 0.5\n",
     "K = 0.5 / d\n",
@@ -66,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,15 +93,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "t = np.arange(0, sample_interval, 1 / fs)\n",
     "sig = Array_Signals(c, f, T_on, T, S, (d1, d2, d3))\n",
-    "sig.set_params(1, 1, 1, 2, 1e-6)\n",
+    "sig.set_params(*noise_params)\n",
     "sig.init_rng(1)\n",
-    "x = sig.next(t, (0, 1))"
+    "x = sig.next(t, velocity)"
    ]
   },
   {
@@ -111,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,25 +151,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "真实时延差tau12: \t0.00016729010515537842\n",
-      "相关时延差tau12': \t0.00011400000000000299\n",
-      "差异: 31.85%\n",
-      "真实时延差tau23: \t0.00016604010320237232\n",
-      "相关时延差tau23': \t0.00016599999999999948\n",
-      "差异: 0.02%\n"
+      "真实时延差tau12: \t0.0002887\n",
+      "相关时延差tau12': \t0.0002620\n",
+      "差异: 9.25%\n",
+      "真实时延差tau23: \t0.0002887\n",
+      "相关时延差tau23': \t0.0003020\n",
+      "差异: 4.62%\n"
      ]
     }
    ],
    "source": [
-    "print(f'真实时延差tau12: \\t{t12}\\n相关时延差tau12\\': \\t{tau12_hat}\\n差异: {np.abs(t12 - tau12_hat) / t12 * 100:.2f}%')\n",
-    "print(f'真实时延差tau23: \\t{t23}\\n相关时延差tau23\\': \\t{tau23_hat}\\n差异: {np.abs(t23 - tau23_hat) / t23 * 100:.2f}%')"
+    "print(f'真实时延差tau12: \\t{t12:.7f}\\n相关时延差tau12\\': \\t{tau12_hat:.7f}\\n差异: {np.abs(t12 - tau12_hat) / t12 * 100:.2f}%')\n",
+    "print(f'真实时延差tau23: \\t{t23:.7f}\\n相关时延差tau23\\': \\t{tau23_hat:.7f}\\n差异: {np.abs(t23 - tau23_hat) / t23 * 100:.2f}%')"
    ]
   },
   {
@@ -179,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -187,22 +189,20 @@
      "output_type": "stream",
      "text": [
       "----真实----\n",
-      "r: 100.000, theta: 60.000\n",
+      "r: 1000.000, theta: 30.000\n",
       "----远场----\n",
-      "r: -2.640, theta: 65.165\n",
+      "r: -1.185, theta: 32.221\n",
       "----近场----\n",
-      "r: 2.620, theta: 64.770\n",
-      "方位估计绝对误差: \t-4.770度\n",
-      "方位估计相对误差: \t-7.950%\n"
+      "r: 1.170, theta: 29.807\n"
      ]
     }
    ],
    "source": [
-    "r_far, theta_far = far_locate(tau12_hat, tau23_hat, c, K, d)\n",
-    "r_near, theta_near = near_locate(tau12_hat, tau23_hat, c, K, d)\n",
+    "r_far, angle_far = far_locate(tau12_hat, tau23_hat, c, K, d)\n",
+    "r_near, angle_near = near_locate(tau12_hat, tau23_hat, c, K, d)\n",
     "print(f'----真实----\\nr: {r:.3f}, theta: {np.rad2deg(theta):.3f}')\n",
-    "print(f'----远场----\\nr: {r_far:.3f}, theta: {np.rad2deg(theta_far):.3f}')\n",
-    "print(f'----近场----\\nr: {r_near:.3f}, theta: {np.rad2deg(theta_near):.3f}\\n方位估计绝对误差: \\t{np.rad2deg(theta - theta_near):.3f}度\\n方位估计相对误差: \\t{(theta - theta_near)/theta * 100:.3f}%')"
+    "print(f'----远场----\\nr: {r_far:.3f}, theta: {angle_far:.3f}')\n",
+    "print(f'----近场----\\nr: {r_near:.3f}, theta: {angle_near:.3f}')"
    ]
   }
  ],
