feat(算法细化): :sparkles: 将样本存储格式改为多轨flac

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,13 +44,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "fc = 37500  # 声源频率\n",
     "sample_interval = 1  # 采样时长\n",
-    "fs = 500e3  # 采样频率500k\n",
+    "fs = 8 * fc  # 倍频采样频率\n",
+    "# fs = 500000  # 500k采样率\n",
     "\n",
     "vel_angle = 90\n",
     "speed = 1\n",
@@ -74,8 +75,8 @@
     "    c=1500  # 声速\n",
     ")\n",
     "\n",
-    "# sig.array.set_noise_params(0.01, 0.01, 0.01)\n",
-    "# sig.set_ideal()"
+    "# snapshot_generator.array.set_noise_params(0.01, 0.01, 0.01)\n",
+    "# snapshot_generator.set_ideal()"
    ]
   },
   {
@@ -87,12 +88,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "t = np.arange(0, sample_interval, 1 / fs)\n",
     "x = snapshot_generator(t, velocity)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import soundfile as sf\n",
+    "\n",
+    "x0 = x[0].T\n",
+    "x0 = x0 / np.max(np.abs(x0))  # 似乎1被认为是最大赋值\n",
+    "sf.write('fc_37500-fs_factor_8.flac', x0, fs)"
    ]
   },
   {
