--- a/cnn_from_gcc.ipynb
+++ b/cnn_from_gcc.ipynb
@@ -31,8 +31,8 @@
    "source": [
     "## TODO\n",
     "\n",
-    "- 加窗时序\n",
-    "- 手动xcorr"
+    "- GAN补充细节, 补充信号波形先验信息\n",
+    "- 由输入阵列信号估计初相位 (得分析下实际设备信号特征), 从而应用三元阵时延估计法"
    ]
   },
   {
@@ -966,7 +966,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
