--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,17 +88,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "t = np.arange(0, sample_interval, 1 / fs)\n",
-    "x = snapshot_generator(t, velocity)"
+    "x, r_real, angle_real = snapshot_generator(t, velocity)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
     "\n",
     "x0 = x[0].T\n",
     "x0 = x0 / np.max(np.abs(x0))  # 似乎1被认为是最大赋值\n",
-    "sf.write('fc_37500-fs_factor_8.flac', x0, fs)"
+    "sf.write(f'fc_{fc}-fs_factor_8.flac', x0, fs)"
    ]
   },
   {
